# LostEngine

./: .gitignore  CMakeLists.txt  README.md  create_ls_game.py  genesis.json  userfull-commands.txt
Dependencies/includes/glad/: glad.h
Dependencies/libs/: assimp-vc140-mt.lib  glfw3.lib
assets/resources/models/Alysson Claret/: Alysson Claret.mtl
assets/resources/models/Girl/: girl.mtl
assets/resources/models/earth/: earth.mtl
assets/resources/shaders/: lights.fs  lights.vs
assets/resources/shaders/2d/: sprite_renderer.fs
assets/resources/shaders/Particles/: particle.vs
assets/resources/shaders/Water/: water.vs
assets/resources/shaders/postProcessing/: contrast.fs
src/: CMakeLists.txt  LostEngine.sln
src/Engine/: CMakeLists.txt  LostEngine.cpp  LostEngine.h
src/Engine/Audio/: AudioManager.cpp  AudioManager.h
src/Engine/Components/: Component.cpp  Component.h  RenderComponent.cpp  RenderComponent.h  Transform.cpp  Transform.h
src/Engine/Entities/: Entity.cpp  Entity.h
src/Engine/Gfx/Gfx2D/: Camera2d.cpp  Camera2d.h  Renderer2d.cpp  Renderer2d.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h
src/Engine/Gfx/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Lights.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Engine/Gfx/Models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  RawModel.cpp
src/Engine/Gfx/Particles/: Particle.cpp  Particle.h  ParticleFactory.cpp  ParticleFactory.h  ParticleMaster.cpp  ParticleMaster.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleShader.cpp  ParticleShader.h  ParticleSystem.cpp  ParticleSystem.h  ParticleTexture.cpp  ParticleTexture.h  Particles.h
src/Engine/Gfx/PostProcessing/: ContrastChanger.cpp  ContrastChanger.h  ContrastShader.cpp  ContrastShader.h  Fbo.cpp  Fbo.h  ImageRenderer.cpp  ImageRenderer.h  PostProcessing.cpp  PostProcessing.h
src/Engine/Gfx/Skybox/: SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h
src/Engine/Gfx/Terrain/: HeightsGenerator.cpp  HeightsGenerator.h
src/Engine/Gfx/Utils/: Camera.cpp  Camera.h  Loader.cpp  Loader.h  Shader.cpp  Shader.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  Window.cpp  Window.h  glad.c  stb_image.cpp  vertices.h
src/Engine/Gfx/Water/: Water.h  WaterFrameBuffer.cpp  WaterFrameBuffer.h  WaterRenderer.cpp  WaterRenderer.h  WaterShader.cpp  WaterShader.h  WaterTile.cpp  WaterTile.h
src/Engine/Input/: Input.cpp  Input.h
src/Engine/Logic/: GameLogic.h
src/Engine/Net/: Packet.cpp  Packet.h
src/Engine/Tools/: AssetManager.cpp  AssetManager.h  FileSystem.cpp  FileSystem.h  Log.h  Maths.cpp  Maths.h  Timer.cpp  Timer.h
src/Engine/UI/: UIImage.cpp  UIImage.h
src/EngineTester/: CMakeLists.txt  main.cpp
src/EngineTester/Water/: WaterRenderer.h  WaterShader.cpp  WaterShader.h  WaterTile.cpp
src/Game/: CMakeLists.txt
src/Game/Water/: WaterTile.h
src/LostEngine/: Constants.h  GameEntity.cpp  GameEntity.h  LostEngine.vcxproj  LostEngine.vcxproj.filters  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  main.cpp  vertices.h
src/LostEngine/Engine/: main.cpp
src/LostEngine/Engine/Gfx/Lights/: DirectionalLight.h  Light.cpp  PointLight.h  SpotLight.cpp
src/LostEngine/Engine/Gfx/Models/: Model.h  RawModel.cpp  RawModel.h
src/LostEngine/Engine/Gfx/Utils/: Loader.cpp  Shader.cpp  Shader.h  glad.c
src/LostEngine/Game/: main.cpp
src/LostEngine/Game/Water/: WaterRenderer.cpp  WaterRenderer.h  WaterShader.cpp
src/LostEngine/shaders/: default.fs  default.vs  diffuse_map.fs
